manifests/broken/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: broken
  labels:
    environment: simulation
    state: broken
